################################################################################
#
# nerfnet build
#
################################################################################

# Subdirectories ###############################################################

add_subdirectory(driver)
add_subdirectory(net)
add_subdirectory(util)
