################################################################################
#
# nerfnet build
#
################################################################################

# Subdirectories ###############################################################

add_subdirectory(net)
add_subdirectory(util)
