################################################################################
#
# driver build
#
################################################################################

# nrf24 ########################################################################

add_library(nrf24
  nrf24.cc
)

target_include_directories(nrf24 PUBLIC
  ${PROJECT_SOURCE_DIR}
)
